static/css/my-app.css
#tm-page-header {
    height: 60px;
    background-color: #cfd;
    line-height: 40px;
    padding: 10px 0px;
    font-size: 24px;
}

#tm-page-footer {
    height: 60px;
}

a:focus {
    text-decoration: none;
}


a:hover, #tm-page-header a:hover {
    text-decoration: none;
    color: #aaa;
}

#tm-page-header a {
    color: #664;
    margin: 0 40px 0 0;
}


.tm-show-tags-list {
    line-height: 24px;
    margin-bottom: 20px;
    border-bottom: solid 1px #ddd;
    padding-bottom: 5px;
}

h3, h4 {
    background-color: #eff;
    padding: 10px;
}

.tm-portal h3:first-child, .tm-portal h4:first-child {
    margin-top: 0px;
}

.tm-datepicker-hyphen {
    padding: 0 5 0 20px;
}


.tm-datepicker-button {
    margin-left: 20px;
}

h3 .tm-grand-total {
    float: right;
}

.tm-account-due-amt {
    font-size: small;
    margin-left: 5px;
}

.tm-account-due-amt b {
    color: red;
}

.tm-resolved-pending-tran {
    font-size: small;
    color: #999;
    margin-left: 10px;
}

/* make it same width as the "more" button */
button.tm-fetch-all-trans-button {
    width: 50px;
}

.form-tag {
    display: inline-block;
    margin-bottom: 0px;
}

.tm-tran-table .form-tag {
    margin-bottom: 0px;
}

.div-tags {
    font-size: smaller;
}

.div-tags td { 
     border-top: none !important; 
 }

.tm-input-tag {
    margin: 0 4px;
}

.tm-tag-list input {
    border: none;
    box-shadow: none;
    display: inline;
    height: 20px;
    margin: 0 4px;
}

.tm-tran-table .tm-tag-list {
    font-size: smaller;
}


/* 
tr.div-tags td.tm-tag-list {
    line-height: 20px;
}

tr.div-tags td {
    padding-top: 0px !important;
    padding-bottom: 10px !important;
}
    */

.div-ack {
    text-align: center;
}

form.div-ack {
    margin-bottom: 0px;
}

.div-ack button {
    padding: 1px 4px;   
    line-height: inherit;
}


.list-new-trans {
    font-size: 16px;
}

.list-new-trans li {
    border-top: solid 1px #ccc;
    padding: 4px 0 16px;
}

.list-new-trans span {
    padding: 2px;
}

.new-tran-date {
    font-size: large;
}

.new-tran-amount {
    font-size: large;
}

tr td.new-tran-ispending {
    font-size: small;
    vertical-align: middle !important;
}

[tm-is-debit] {
    white-space: nowrap;
}

[tm-is-debit=true] {
    color: #b00;
}

[tm-is-debit=false] {
    color: #0b0
}

/**
[tm-is-transfer=true] {
    color: #00b;
}
    */


[tm-account-type=credit] {
    color: #b00;
}

.tm-portal {
    border: solid 1px #ddd;
    padding: 10px;
    border-radius: 5px;
    margin-top: 40px;
}

form.tm-portal {
    margin-bottom: 0px;
    overflow: hidden;
}

form.tm-portal button {
    margin-top: 5px;
}

.tm-account-list [tm-is-debit=true] {
    color: #b00;
}


tr.tm-account-list-total tr.tm-list-totals {
    border-top: solid 2px black;
}

.tm-tag-filter-list {
    padding-bottom: 10px;
}


.tm-md-autocomplete {
    width: 85%;
    float: left;
}

span.span-tag {
    background-color: #9b9;
    color: white;
    padding: 2px 4px;
    margin: 2px;
    border-radius: 4px;
    /* white-space: nowrap; */
}

.span-tag .span-tag-x {
    color: #44b;
}

.span-tag .span-tag-x:hover {
    font-weight: bold;
    text-decoration: none
}


/*
.span-tag:hover .span-tag-x {
    display: inline;
}
*/


li.filtered-tag {
    padding: 0px;
    border:none;
}

